--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+.box {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10%;
+  padding: 10%;
+  
+}
+.boxList{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  
+}
